# BLPConverter

./: .travis.yml  CMakeLists.txt  LICENSE  README  blp.cpp  blp.h  blp_internal.h  main.cpp
dependencies/: CMakeLists.txt
dependencies/FreeImage/: CMakeLists.txt
dependencies/FreeImage/FreeImage/: BitmapAccess.cpp  CacheFile.cpp  Conversion.cpp  Conversion16_555.cpp  Conversion16_565.cpp  Conversion24.cpp  Conversion32.cpp  Conversion4.cpp  Conversion8.cpp  ConversionRGBF.cpp  ConversionType.cpp  FreeImage.cpp  FreeImageIO.cpp  Halftoning.cpp  MemoryIO.cpp  MultiPage.cpp  PSDParser.cpp  PSDParser.h  PixelAccess.cpp  Plugin.cpp  PluginBMP.cpp  PluginCUT.cpp  PluginDDS.cpp  PluginEXR.cpp  PluginGIF.cpp  PluginHDR.cpp  PluginICO.cpp  PluginJPEG.cpp  PluginMNG.cpp  PluginPCD.cpp  PluginPCX.cpp  PluginPFM.cpp  PluginPICT.cpp  PluginPNG.cpp  PluginPNM.cpp  PluginPSD.cpp  PluginRAS.cpp  PluginRAW.cpp  PluginTARGA.cpp  PluginTIFF.cpp  (+7 more)
dependencies/FreeImage/FreeImageToolkit/: BSplineRotate.cpp  Background.cpp  Channels.cpp  ClassicRotate.cpp  Colors.cpp  CopyPaste.cpp  Display.cpp  Flip.cpp  JPEGTransform.cpp  MultigridPoissonSolver.cpp  Rescale.cpp
dependencies/FreeImage/LibOpenJPEG/: opj_includes.h  opj_malloc.h
dependencies/FreeImage/LibPNG/: pngconf.h
dependencies/FreeImage/LibRawLite/: Copyright
dependencies/FreeImage/LibRawLite/internal/: dcraw_common.cpp  dcraw_fileio.cpp  defines.h  libraw_internal_funcs.h  var_defines.h
dependencies/FreeImage/LibRawLite/libraw/: libraw.h  libraw_alloc.h  libraw_const.h  libraw_datastream.h  libraw_internal.h  libraw_types.h  libraw_version.h
dependencies/FreeImage/LibRawLite/src/: libraw_c_api.cpp  libraw_cxx.cpp
dependencies/FreeImage/LibTIFF/: t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_config.h  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_version.c  tif_warning.c  tif_write.c  tif_zip.c  tiff.h  (+2 more)
dependencies/FreeImage/Metadata/: Exif.cpp  FIRational.cpp  FIRational.h  FreeImageTag.cpp  FreeImageTag.h  IPTC.cpp  TagConversion.cpp  TagLib.cpp  XTIFF.cpp
dependencies/FreeImage/OpenEXR/IlmImf/: ImfScanLineInputFile.cpp
dependencies/FreeImage/ZLib/: LICENSE
dependencies/squish/: CMakeLists.txt  alpha.cpp  singlecolourfit.cpp
doc/: MagosBlpFormat.txt
extra/: convert_all.py
